Pontoon: Update Hindi (hi-IN) localization of AMO
Localization authors:
- heemananyatanti <heemananyatanti@gmail.com>
- Ritesh Raj <ritesh07raj@gmail.com>

--- a/locale/hi_IN/LC_MESSAGES/djangojs.po
+++ b/locale/hi_IN/LC_MESSAGES/djangojs.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2019-07-17 11:18+0000\n"
-"PO-Revision-Date: 2018-08-03 10:51+0000\n"
-"Last-Translator: Mahtab Alam <mahtab.ceh@gmail.com>\n"
+"PO-Revision-Date: 2019-05-24 06:58+0000\n"
+"Last-Translator: Ritesh Raj <ritesh07raj@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: hi_IN\n"
 "MIME-Version: 1.0\n"
@@ -62,10 +62,10 @@ msgstr[0] "&hellip;और {0} अधिक"
 msgstr[1] "&hellip;और {0} अधिक"
 
 msgid "See full validation report"
-msgstr "पूर्ण मान्यकरण रिपोर्ट देखें"
+msgstr "पूर्ण मान्यकरण रिपोर्ट देये"
 
 msgid "Validating {0}"
-msgstr "{0} कि पुष्ठी जरी है"
+msgstr "{0} कि पुष्ठी जारी है"
 
 msgid "Your add-on exceeds the maximum size of {0}."
 msgstr "आपका ऐड-ऑन अधिकतम आकार {0} से अधिक है."
