--- a/locale/ia/LC_MESSAGES/django.po
+++ b/locale/ia/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PROJECT 1.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2019-07-17 11:18+0000\n"
-"PO-Revision-Date: 2019-07-20 21:41+0000\n"
+"PO-Revision-Date: 2019-07-20 22:59+0000\n"
 "Last-Translator: Melo46 <melo@carmu.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ia\n"
@@ -1824,7 +1824,6 @@ msgstr "Acceptar"
 msgid "or <a href=\"{0}\">Cancel</a>"
 msgstr "o <a href=\"{0}\">Cancellar</a>"
 
-#, fuzzy
 msgid "More information on Developer Accounts"
 msgstr "Altere informationes sur Creative Commons licenses"
 
@@ -2764,9 +2763,8 @@ msgstr "Generar nove credentiales"
 msgid "Invisible"
 msgstr "Invisibile"
 
-#, fuzzy
 msgid "Approved and recommended"
-msgstr "Revisiones approbate"
+msgstr "Approbate e recommendate"
 
 msgid "Please complete your add-on by adding a version or missing metadata."
 msgstr "Per favor completa tu additivo per le metadatos o un version mancante."
@@ -2777,9 +2775,8 @@ msgstr "Tu recipera un email quando le revision es complete. Usque alora, tu add
 msgid "Your add-on is displayed in our gallery and users are receiving automatic updates."
 msgstr "Tu additivo es displicate in nostre galeria e le usatores recipe le actualisationes automatic."
 
-#, fuzzy
 msgid "Your add-on was disabled by a site administrator and is no longer shown in our gallery. If you have any questions, please email amo-admins@mozilla.com."
-msgstr "Tu additivo esseva disactivate per un administrator del sito e non es plus monstrate in nostre galeria. Si tu ha ulle questiones, per favor email amo-admins@mozilla.org."
+msgstr "Tu additivo esseva disactivate per un administrator del sito e non es plus monstrate in nostre galeria. Si tu ha ulle questiones, per favor email amo-admins@mozilla.com."
 
 msgid "Your add-on won't be included in search results, and its listing page will indicate you disabled it. New version submissions for listing won't be accepted in this state."
 msgstr ""
@@ -4613,18 +4610,16 @@ msgid "Not only block annoying ads, but protect yourself against malware and ad 
 msgstr ""
 
 #. editorial content for the discovery pane.
-#, fuzzy
 msgid "Download media easier {start_sub_heading}with {addon_name}{end_sub_heading}"
-msgstr "Discarga videos {start_sub_heading}con {addon_name}{end_sub_heading}"
+msgstr "Discarga medios plus facilemente {start_sub_heading}con {addon_name}{end_sub_heading}"
 
 #. editorial content for the discovery pane.
 msgid "Enjoy multi-threading download support. Automatically detect different types of media available for download."
 msgstr ""
 
 #. editorial content for the discovery pane.
-#, fuzzy
 msgid "Save images easily {start_sub_heading}with {addon_name}{end_sub_heading}"
-msgstr "Cerca imagines {start_sub_heading}con {addon_name}{end_sub_heading}"
+msgstr "Salva imagines facilemente {start_sub_heading}con {addon_name}{end_sub_heading}"
 
 #. editorial content for the discovery pane.
 msgid "Grab just images from your current tab."
@@ -5402,9 +5397,8 @@ msgstr "Peso"
 msgid "Information Request Deadline"
 msgstr "Data limite del demanda de informationes"
 
-#, fuzzy
 msgid "Last Updated"
-msgstr "Ultime actualisation:"
+msgstr "Ultime actualisation"
 
 msgid "This will approve, sign, and publish this version. The comments will be sent to the developer."
 msgstr "Isto approbara, signara, e publicara iste version. Le commentos sera inviate al disveloppator."
