Pontoon: Update Italian (it) localization of AMO
Localization authors:
- Sara Todaro <sara.todaro@mozillaitalia.org>

--- a/locale/it/LC_MESSAGES/django.po
+++ b/locale/it/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: REMORA 0.1\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2019-07-17 11:18+0000\n"
-"PO-Revision-Date: 2019-07-21 08:18+0000\n"
-"Last-Translator: Davide Quaranta <dvd.forty@gmail.com>\n"
+"PO-Revision-Date: 2019-07-21 12:41+0000\n"
+"Last-Translator: Sara Todaro <sara.todaro@mozillaitalia.org>\n"
 "Language-Team: Mozilla Italia\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -4897,7 +4897,7 @@ msgid "You cannot submit a Mozilla Signed Extension"
 msgstr "Impossibile caricare un’estensione già firmata digitalmente da Mozilla"
 
 msgid "You cannot submit a language pack"
-msgstr ""
+msgstr "Impossibile caricare un language pack"
 
 msgid "Unsupported file type, please upload a supported file {extensions}."
 msgstr "Tipo di file non supportato. Estensioni file supportate: {extensions}."
@@ -6457,12 +6457,14 @@ msgstr ""
 "devi includerlo tu nel pattern."
 
 msgid "The email address used for your account is not allowed for add-on submission."
-msgstr ""
+msgstr "L’indirizzo email del tuo account non possiede i permessi necessari per caricare componenti aggiuntivi."
 
 msgid ""
 "Enter full disposable email domain that should be blocked. Wildcards are not supported: if you need those, or need to match against the entire email and not just the domain part, use \"Email user "
 "restrictions\" instead."
 msgstr ""
+"Inserisci per intero il dominio email “usa e getta” da bloccare. I metacaratteri non sono supportati: per utilizzarli o per trovare corrispondenze con l’indirizzo email completo invece che con il "
+"solo dominio, usa “Restrizioni email utente”."
 
 msgid ""
 "Before starting, please read and accept our Firefox Add-on Distribution Agreement as well as our Review Policies and Rules. The Firefox Add-on Distribution Agreement also links to our Privacy Notice"
